fixed layout issues

--- a/code/style.css
+++ b/code/style.css
@@ -26,6 +26,7 @@ body {
 
 .logo {
   width: 75px;
+  height: auto;
   margin: 5px;
   border: 4px solid black;
 }
@@ -41,7 +42,7 @@ body {
 }
 
 .hero-text {
-  font-size: 42px;
+  font-size: 32px;
   position: absolute;
   top: 20%;
   left: 50%;
@@ -212,7 +213,7 @@ label {
 
 
 .active +.answer {
-height: 75px;
+height: 100px;
 }
 
 
@@ -289,6 +290,17 @@ height: 75px;
 
 /* Tablet */
 @media (min-width: 768px) {
+  
+  .hero-text {
+    font-size: 42px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; 
+    -webkit-text-stroke: 1px black;
+  }
+  
   .navigation {
     display: flex;
     justify-content: row;
